dhall/tests/type-inference/failure/unit/UnionConstructorFieldNotPresent.txt
Type error: error: MissingUnionField
 --> <current file>:1:1
  |
1 | < x : Bool >.y
  | ^^^^^^^^^^^^^^ MissingUnionField
  |
